# aes67-nmos-bridge

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  conanfile.txt  pyproject.toml
.cursor/: Dockerfile  environment.json  install.sh  setup-conan-profile.sh
.github/workflows/: ci.yml
config/: example.json
src/: main.cpp
src/aes67_nmos_bridge/: __init__.py  api.py  cli.py  config.py  daemon_client.py  models.py  nmos.py  ownership.py  reconciler.py  sdp.py  service.py  store.py
src/bridge/: config.cpp  config.h  daemon_client.cpp  daemon_client.h  ownership.cpp  ownership.h  reconciler.cpp  reconciler.h
src/nmos/: connection.cpp  connection.h  nmos_resources.cpp  nmos_resources.h
tests/: test_api.py  test_config.cpp  test_config_and_ownership.py  test_daemon_client.py  test_nmos_model.py  test_nmos_settings.cpp  test_ownership.cpp  test_reconciler.cpp  test_reconciler.py  test_service_http.py  test_store.py
tests/conformance/: run_nmos_testing.py
tests/integration/: daemon.conf  real_daemon_integration.py
