[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "aes67-nmos-bridge"
version = "0.1.0"
description = "Config-driven NMOS control bridge for bondagit/aes67-linux-daemon"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "AES67 NMOS Bridge Contributors" }]
license = { text = "Apache-2.0" }

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.8"]

[project.scripts]
aes67-nmos-bridge = "aes67_nmos_bridge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
